// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OrderInfoItem Component > matches snapshot with React node value 1`] = `
<div
  class="flex flex-col sm:flex-row sm:items-center gap-2 "
>
  <dt
    class="text-sm font-medium text-gray-500 min-w-[120px] flex-shrink-0"
  >
    Status
  </dt>
  <dd
    class="text-sm text-gray-900 flex-1"
  >
    <span
      class="badge badge-success"
    >
      Completed
    </span>
  </dd>
</div>
`;

exports[`OrderInfoItem Component > matches snapshot with custom className 1`] = `
<div
  class="flex flex-col sm:flex-row sm:items-center gap-2 border-t pt-2"
>
  <dt
    class="text-sm font-medium text-gray-500 min-w-[120px] flex-shrink-0"
  >
    Total
  </dt>
  <dd
    class="text-sm text-gray-900 flex-1"
  >
    $199.99
  </dd>
</div>
`;

exports[`OrderInfoItem Component > matches snapshot with string value 1`] = `
<div
  class="flex flex-col sm:flex-row sm:items-center gap-2 "
>
  <dt
    class="text-sm font-medium text-gray-500 min-w-[120px] flex-shrink-0"
  >
    Order ID
  </dt>
  <dd
    class="text-sm text-gray-900 flex-1"
  >
    ORD-123456
  </dd>
</div>
`;

exports[`OrderInfoItem Component > renders consistently with React node value 1`] = `
<div
  class="flex flex-col sm:flex-row sm:items-center gap-2 "
>
  <dt
    class="text-sm font-medium text-gray-500 min-w-[120px] flex-shrink-0"
  >
    Status
  </dt>
  <dd
    class="text-sm text-gray-900 flex-1"
  >
    <span
      class="badge badge-success"
    >
      Completed
    </span>
  </dd>
</div>
`;

exports[`OrderInfoItem Component > renders consistently with custom className 1`] = `
<div
  class="flex flex-col sm:flex-row sm:items-center gap-2 border-t pt-2"
>
  <dt
    class="text-sm font-medium text-gray-500 min-w-[120px] flex-shrink-0"
  >
    Total
  </dt>
  <dd
    class="text-sm text-gray-900 flex-1"
  >
    $199.99
  </dd>
</div>
`;

exports[`OrderInfoItem Component > renders consistently with string value 1`] = `
<div
  class="flex flex-col sm:flex-row sm:items-center gap-2 "
>
  <dt
    class="text-sm font-medium text-gray-500 min-w-[120px] flex-shrink-0"
  >
    Order ID
  </dt>
  <dd
    class="text-sm text-gray-900 flex-1"
  >
    ORD-123456
  </dd>
</div>
`;
